--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
 <html lang="is">
+
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./dist/styles.css">
+  <link rel="stylesheet" href="./grid.css">
   <title>Hópverkefni 2</title>
 </head>
-<body>
 
+<body>
+  <header class="header">
+    <div class="protection"></div>
+    <div class="header__header">
+      <div class="header__subtitle">
+        Vefforritun
+      </div>
+      <h1 class="header__title">
+        Fyrirlestrar
+      </h1>
+    </div>
+  </header>
+  <main class="main">
+    <div class="buttons">
+      <button class="button--fyrirlestrar">HTML</button>
+      <button class="button--fyrirlestrar">CSS</button>
+      <button class="button--fyrirlestrar">JavaScript</button>
+    </div>
+  </main>
 </body>
+
 </html>
