lang kominn með útlit á forsíðu og prófaði að harðkóða inn fyrirlestra

--- a/index.html
+++ b/index.html
@@ -28,6 +28,117 @@
       <button class="button--fyrirlestrar">CSS</button>
       <button class="button--fyrirlestrar">JavaScript</button>
     </div>
+    <div class="lectures">
+      <div class="lectures__row">
+        <div class="lectures__col">
+          <div class="lecture">
+            <img class="lecture__img" src="img/thumb1.jpg">
+            <div class="lecture__header">
+              <div class="lecture__text">
+                <div class="lecture__text__category">
+                  html
+                </div>
+                <div class="lecture__text__title">
+                  Sagan
+                </div>
+              </div>
+              <div class="lecture__checked--done">
+                ✓
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="lectures__col">
+          <div class="lecture">
+            <div class="lecture__header">
+              <div class="lecture__text">
+                <div class="lecture__text__category">
+                  html
+                </div>
+                <div class="lecture__text__title">
+                  Element
+                </div>
+              </div>
+              <div class="lecture__checked">
+                ✓
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="lectures__col">
+          <div class="lecture">
+            <img class="lecture__img" src="img/thumb1.jpg">
+            <div class="lecture__header">
+              <div class="lecture__text">
+                <div class="lecture__text__category">
+                  JavaScript
+                </div>
+                <div class="lecture__text__title">
+                  Föll
+                </div>
+              </div>
+              <div class="lecture__checked">
+                ✓
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="lectures__col">
+          <div class="lecture">
+            <img class="lecture__img" src="img/thumb1.jpg">
+            <div class="lecture__header">
+              <div class="lecture__text">
+                <div class="lecture__text__category">
+                  html
+                </div>
+                <div class="lecture__text__title">
+                  Skalanleg hönnun
+                </div>
+              </div>
+              <div class="lecture__checked">
+                ✓
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="lectures__col">
+          <div class="lecture">
+            <img class="lecture__img" src="img/thumb1.jpg">
+            <div class="lecture__header">
+              <div class="lecture__text">
+                <div class="lecture__text__category">
+                  html
+                </div>
+                <div class="lecture__text__title">
+                  Gildi, týpur og virkjar
+                </div>
+              </div>
+              <div class="lecture__checked">
+                ✓
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="lectures__col">
+          <div class="lecture">
+            <img class="lecture__img" src="img/thumb1.jpg">
+            <div class="lecture__header">
+              <div class="lecture__text">
+                <div class="lecture__text__category">
+                  html
+                </div>
+                <div class="lecture__text__title">
+                  Gildi, týpur og virkjar
+                </div>
+              </div>
+              <div class="lecture__checked">
+                ✓
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 </body>
 
