útlit byrjað að looka

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </div>
         <div class="lectures__col">
           <div class="lecture">
+            <img class="lecture__img">
             <div class="lecture__header">
               <div class="lecture__text">
                 <div class="lecture__text__category">
@@ -121,7 +122,7 @@
         </div>
         <div class="lectures__col">
           <div class="lecture">
-            <img class="lecture__img" src="img/thumb1.jpg">
+            <img class="lecture__img" src="img/thumb6.jpg">
             <div class="lecture__header">
               <div class="lecture__text">
                 <div class="lecture__text__category">
