--- a/fyrirlestur.html
+++ b/fyrirlestur.html
@@ -5,6 +5,16 @@
   <title>Fyrirlestur</title>
 </head>
 <body class="lecture-page">
-
+  <header class="header">
+    <div class="protection"></div>
+    <div class="header__header">
+      <div class="header__subtitle">
+        Vefforritun
+      </div>
+      <h1 class="header__title">
+        Fyrirlestrar
+      </h1>
+    </div>
+  </header>
 </body>
 </html>
