--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <header class="header">
     <div class="protection"></div>
+    </div>
     <div class="header__header">
       <div class="header__subtitle">
         Vefforritun
