--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <button class="button--fyrirlestrar">CSS</button>
       <button class="button--fyrirlestrar">JavaScript</button>
     </div>
-    <div class="lectures">
+    <div class="lectures list">
       <div class="lectures__row">
         <div class="lectures__col">
           <div class="lecture">
@@ -141,6 +141,7 @@
       </div>
     </div>
   </main>
+  <script src="./dist/bundle.js"></script>
 </body>
 
 </html>
