Lista virkni kláruð

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <button class="button--fyrirlestrar">CSS</button>
       <button class="button--fyrirlestrar">JavaScript</button>
     </div>
-    <div class="lectures list">
-      <div class="lectures__row">
+    <div class="lectures">
+      <div class="lectures__row list">
         <div class="lectures__col">
           <div class="lecture">
             <img class="lecture__img" src="img/thumb1.jpg">
