--- a/fyrirlestur.html
+++ b/fyrirlestur.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="is">
+
 <head>
   <meta charset="utf-8">
   <title>Fyrirlestur</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./dist/styles.css">
+  <link rel="stylesheet" href="./grid.css">
 </head>
+
 <body class="lecture-page">
   <header class="header">
     <div class="protection"></div>
+    </div>
     <div class="header__header">
       <div class="header__subtitle">
         Vefforritun
@@ -16,5 +23,14 @@
       </h1>
     </div>
   </header>
+  <main class="main">
+
+  </main>
+  <footer class="footer">
+    <button class="footer__button footer__button--done">✓ Fyrirlestur kláraður</button>
+    <a class="footer__link" href="./index.html">Til baka</a>
+  </footer>
+  <script src="./dist/bundle.js"></script>
 </body>
+
 </html>
