öll rétt gögn birtast á fyrirlestra síðu eftir að gera útlit

--- a/fyrirlestur.html
+++ b/fyrirlestur.html
@@ -24,10 +24,54 @@
     </div>
   </header>
   <main class="main">
-
+    <div class="content">
+      <div class="content__row">
+        <div class="content__col">
+          <iframe class="video"
+            src="https://www.youtube.com/embed/-dC37AYntUQ"></iframe>
+        </div>
+        <div class="content__col">
+          <p class="text">
+            Frá örófi alda höfum við sagt hvort öðru sögur. Í fyrstu geymdar í
+            minni einstaklinga, seinna skrifaðar á skinn eða pappír, síðan
+            prentaðar með prentvél Gutenbergs og núna fjölfaldaðar í
+            prentsmiðjum.\nPrentaður texti er í eðli sínu fastur. Við höfum
+            blaðsíður í ákveðinni stærð sem textinn er prentaður á og eftir það
+            eru engar breytingar mögulegar. En hvað ef svo væri ekki?\nÁrið 1941
+            gaf Jorge Luis Borges út smásöguna „The Garden of Forking Paths” sem
+            segir frá höfundi sem ætlar að skrifa stóra og flókna bók ásamt því
+            að
+            búa til stórt og flókið völundarhús. Síðar kemur í ljós að bókin og
+            völundarhúsið er sami hluturinn en sagan lýsir heim þar sem allar
+            mögulegar niðurstöður atburða eiga sér stað samtímis. Þessi smásaga
+            er
+            talin kynna fyrst hugmyndina um HyperText.\nVið lok seinna stríðs
+            skrifaði Vennevar Bush greinina „As We May Think“ í Atlantic Monthly
+            þar sem hann lýsir Memex. Memex er tæki sem leyfir einstakling að
+            halda utan um sitt eigið safn af upplýsingum. Það leyfir flokkun,
+            athugasemdir og tengingar við annað efni svo hægt sé að fletta upp
+            og
+            leita ásamt því að deila með öðrum á einfaldan hátt. Sannkallað
+            töfratæki sem Bush gerði ráð fyrir að myndi gjörbreyta heiminum.
+          </p>
+        </div>
+        <div class="content__col">
+          <div class="quote">
+            <blockquote class="quote__data">
+              The future is already here — it's just not very evenly
+              distributed.
+            </blockquote>
+            <p class="quote__attribute">
+              William Gibson
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <footer class="footer">
-    <button class="footer__button footer__button--done">✓ Fyrirlestur kláraður</button>
+    <button class="footer__button footer__button--done">✓ Fyrirlestur
+      kláraður</button>
     <a class="footer__link" href="./index.html">Til baka</a>
   </footer>
   <script src="./dist/bundle.js"></script>
