lagði stylelint villur

--- a/fyrirlestur.html
+++ b/fyrirlestur.html
@@ -70,8 +70,7 @@
     </div>
   </main>
   <footer class="footer">
-    <button class="footer__button footer__button--done">✓ Fyrirlestur
-      kláraður</button>
+    <button class="footer__button">Klára Fyrirlestur</button>
     <a class="footer__link" href="./index.html">Til baka</a>
   </footer>
   <script src="./dist/bundle.js"></script>
